changes to star

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -434,7 +434,7 @@
     "title": "تقييماتي",
     "average": "متوسط التقييم",
     "empty": "لم تستلم أي تقييمات بعد.",
-    "averageText": "تقييمك المتوسط: {{rating}} ⭐",
+    "averageText": "تقييمك المتوسط: {{rating}}",
     "clientName": "اسم العميل:"
   },
  "taskerMyTasks": {
