Did the skills dropwdown in tasker side

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -416,7 +416,6 @@
      "email": "البريد الإلكتروني",
      "gender": "الجنس",
      "location": "الموقع",
-     "experience": "الخبرة",
      "skills": "المهارات",
      "about": "نبذة (150 حرفًا كحد أقصى)",
      "save": "حفظ التغييرات",
@@ -712,8 +711,7 @@
      "genderFemale": "أنثى",
      "locationBahrain": "البحرين",
      "locationSaudiArabia": "السعودية",
-     "experiencePlaceholder": "الخبرة",
-     "skillsPlaceholder": "المهارات (مفصولة بفواصل)",
+     "skillsPlaceholder": "اختر المهارات",
      "aboutPlaceholder": "نبذة عنك",
      "saveAndContinue": "حفظ ومتابعة",
      "savingProfile": "جاري حفظ ملفك...",
