--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -386,7 +386,6 @@
     "email": "Email Address",
     "gender": "Gender",
     "location": "Location",
-    "experience": "Experience",
     "skills": "Skills",
     "about": "About (max 150 characters)",
     "save": "Save Changes",
@@ -683,8 +682,7 @@
     "genderFemale": "Female",
     "locationBahrain": "Bahrain",
     "locationSaudiArabia": "Saudi Arabia",
-    "experiencePlaceholder": "Experience",
-    "skillsPlaceholder": "Skills (comma separated)",
+    "skillsPlaceholder": "Select Skills",
     "aboutPlaceholder": "About You",
     "saveAndContinue": "Save & Continue",
     "savingProfile": "Saving your profile...",
