Did some translation

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -32,8 +32,16 @@
    "loggingIn": "جاري تسجيل الدخول...",
    "roleConflictMessage": "هذا الحساب مسجل كـ {{userRole}}، وليس كـ {{selectedRole}}.",
    "invalidCredentials": "بيانات الدخول غير صحيحة"
-   },
-   "register": {
+  },
+  "forgotPassword": {
+    "resetPassword": "إعادة تعيين كلمة المرور",
+    "enterEmail": "أدخل بريدك الإلكتروني",
+    "sendResetCode": "إرسال رمز إعادة التعيين",
+    "sending": "جاري الإرسال...",
+    "requestReceived": "تم استلام الطلب",
+    "resetCodeSent": "تم إرسال رمز إعادة تعيين كلمة المرور إلى بريدك الإلكتروني."
+  },
+  "register": {
      "title": "إنشاء حساب ",
      "fullName": "الاسم الكامل",
      "email": "البريد الإلكتروني",
@@ -407,8 +415,18 @@
      "continueToHome": "متابعة إلى الصفحة الرئيسية",
      "uploadFailedTitle": "فشل في الرفع",
      "uploadFailedMessage": "لم يتم رفع المستند. يرجى المحاولة مرة أخرى.",
-     "deleteFailedTitle": "فشل في الحذف",
-     "deleteFailedMessage": "لم يتم حذف المستند."
+     "deleteFailedTitle": "فشل الحذف",
+     "deleteFailedMessage": "لا يمكن حذف المستند.",
+     "chooseSourceTitle": "رفع مستند",
+     "chooseSourceMessage": "اختر كيف تريد رفع مستندك.",
+     "takePhoto": "التقاط صورة",
+     "chooseFromLibrary": "اختيار من الصور",
+     "uploadAFile": "رفع ملف (PDF/doc)",
+     "permissionDenied": "تم رفض الإذن",
+     "cameraDeniedMsg": "إذن الكاميرا مطلوب لالتقاط صورة.",
+     "libraryDeniedMsg": "إذن مكتبة الصور مطلوب لاختيار صورة.",
+     "deleteConfirmTitle": "حذف المستند؟",
+     "deleteConfirmMessage": "هل أنت متأكد من أنك تريد حذف هذا المستند؟"
    },
    "taskerEditProfile": {
      "title": "تعديل الملف الشخصي",
@@ -694,11 +712,54 @@
      "errorGeneric": "حدث خطأ ما. حاول مرة أخرى.",
      "ok": "حسناً",
      "continue": "متابعة",
-     "emailOpenError": "تعذر فتح تطبيق البريد.",
-     "locationAccessTitle": "الوصول إلى الموقع",
+     "emailOpenError": "لا يمكن فتح تطبيق البريد الإلكتروني.",
+     "locationAccessTitle": "الوصول للموقع",
      "locationAccessDenied": "تم رفض إذن الموقع.",
      "notificationsTitle": "الإشعارات",
-     "notificationsDenied": "تم رفض إذن الإشعارات."
+     "notificationsDenied": "تم رفض إذن الإشعارات.",
+     "permissionRequired": "الإذن مطلوب",
+     "locationExplain": "نحتاج موقعك لترتيب المهام حسب الأقرب.",
+     "locationError": "خطأ في الموقع",
+     "locationTryAgain": "لا يمكن الحصول على موقعك. حاول مرة أخرى لاحقاً.",
+     "missingInfo": "معلومات ناقصة",
+     "missingFields": "يرجى ملء جميع الحقول.",
+     "mismatch": "عدم تطابق",
+     "passwordsDoNotMatch": "كلمات المرور لا تتطابق.",
+     "success": "نجح",
+     "somethingWentWrong": "حدث خطأ ما.",
+     "permissionNeeded": "الإذن مطلوب",
+     "locationPermissionRequired": "إذن الموقع مطلوب لعرض موقعك الحالي.",
+     "locationRequired": "الموقع مطلوب",
+     "pleaseSelectLocation": "يرجى تحديد موقع باستخدام الخريطة.",
+     "couldNotOpenMaps": "لا يمكن فتح خرائط جوجل على هذا الجهاز.",
+     "couldNotGetLocation": "لا يمكن الحصول على موقعك الحالي.",
+     "couldNotOpenMapPicker": "لا يمكن فتح منتقي الخريطة.",
+     "invalidEmail": "بريد إلكتروني غير صحيح",
+     "pleaseEnterValidEmail": "يرجى إدخال عنوان بريد إلكتروني صحيح.",
+     "invalidPhoneNumber": "رقم هاتف غير صحيح",
+     "phoneNumberRequirements": "يجب أن يكون رقم الهاتف من 8 إلى 15 رقم ويحتوي على أرقام فقط.",
+     "passwordChangedSuccessfully": "تم تغيير كلمة المرور بنجاح.",
+     "requestReceived": "تم استلام الطلب",
+     "passwordResetCodeSent": "تم إرسال رمز إعادة تعيين كلمة المرور إلى بريدك الإلكتروني.",
+     "passwordResetSuccess": "تم إعادة تعيين كلمة المرور. يرجى تسجيل الدخول.",
+     "resetFailed": "فشل إعادة التعيين.",
+     "serverError": "خطأ في الخادم",
+     "registrationError": "حدث خطأ ما أثناء التسجيل.",
+     "loginError": "حدث خطأ ما.",
+     "uploadFailed": "فشل الرفع",
+     "cameraPermissionRequired": "إذن الكاميرا مطلوب لالتقاط صورة.",
+     "libraryPermissionRequired": "الوصول للمكتبة مطلوب.",
+     "takePhoto": "التقاط صورة",
+     "chooseFromLibrary": "اختيار من المكتبة",
+     "selectImageSource": "اختر مصدر الصورة",
+     "howToUploadImage": "كيف تريد رفع الصورة؟",
+     "managePhoto": "إدارة صورة الملف الشخصي",
+     "chooseNewPhoto": "اختيار صورة جديدة",
+     "removePhoto": "إزالة الصورة",
+     "cancel": "إلغاء",
+     "yes": "نعم",
+     "no": "لا",
+     "client": "عميل"
    },
    "taskerCompleteProfile": {
      "title": "أكمل ملفك الشخصي",
@@ -723,21 +784,22 @@
      "completedMessage": "تم إعداد ملفك الشخصي بنجاح."
    },
    "clientViewBids": {
-     "title": "عروض المهمة",
+     "title": "عروض المهام",
      "chat": "محادثة",
      "accept": "قبول",
      "acceptedLabel": "تم القبول",
-     "alreadySelectedLabel": "تم اختيار مقدم خدمة",
+     "alreadySelectedLabel": "تم اختيار المقدم مسبقاً",
      "viewProfile": "عرض الملف الشخصي",
-     "priceOffered": "السعر المقترح",
-     "currency": "BHD",
-     "noBids": "لا توجد عروض حتى الآن.",
-     "acceptingBid": "جارٍ قبول العرض...",
+     "priceOffered": "السعر المعروض",
+     "currency": "د.ب",
+     "noBids": "لا توجد عروض بعد.",
+     "acceptingBid": "جاري قبول العرض...",
      "acceptedTitle": "تم قبول العرض",
      "acceptedMessage": "تم اختيار {{name}} لهذه المهمة.",
-     "acceptError": "تعذّر قبول العرض. حاول مرة أخرى.",
-     "loadError": "فشل تحميل العروض. حاول مرة أخرى.",
-     "taskerFallbackName": "مقدم خذمة"
+     "acceptError": "لا يمكن قبول العرض. يرجى المحاولة مرة أخرى.",
+     "loadError": "فشل في تحميل العروض. يرجى المحاولة مرة أخرى.",
+     "taskerFallbackName": "مقدم الخدمة",
+     "ok": "حسناً"
    },
    "common": {
      "errorTitle": "خطأ",
