--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -600,7 +600,7 @@
   "heading2": "2. Acknowledgement", 
   "section2": "These Terms form a legally binding agreement between you and Task. By using the App, you expressly accept and agree to abide by these Terms and our Privacy Policy. Do not use the App if you do not agree.",
   "heading3": "3. Legal Status",
-  "section3": "Task is operated by a group of individuals and is not incorporated or registered as a company in Bahrain. Task acts solely as a neutral intermediary platform—not as an employer, representative, or guarantor of any user.",
+  "section3": "Task is operated by a group of individuals and is not incorporated or registered as a company in Bahrain. Task acts solely as a neutral intermediary platform, not as an employer, representative, or guarantor of any user.",
   "heading4": "4. Service Description",
   "section4": "Task enables communication and coordination between Clients and Taskers. Task does not: • Vet user identities, skills, or qualifications • Manage pricing, execution, or quality of services • Supervise or direct any task\n\nAll engagement, agreements, and services are user-to-user. Task does not guarantee any outcome.",
   "heading5": "5. Content & User Obligations",
@@ -608,11 +608,11 @@
   "heading6": "6. Limitation of Liability",
   "section6": "To the fullest legal extent under Bahraini law, Task is not liable for any loss, injury, or damages arising from interactions between users. This includes in connection to: • Task performance, delays, or cancellations • Misconduct or negligence • Payment disputes or service dissatisfaction • Misuse or unauthorized access to Content or documents\n\nYou use the App entirely at your own risk.",
   "heading7": "7. Payments",
-  "section7": "Task may facilitate connections with payment processors, but Task does not process or hold funds. Task is not liable for transaction failures or disputes—those must be resolved directly between the users or via the payment provider.",
+  "section7": "Task may facilitate connections with payment processors, but Task does not process or hold funds. Task is not liable for transaction failures or disputes, those must be resolved directly between the users or via the payment provider.",
   "heading8": "8. Intellectual Property",
   "section8": "All App branding, code, and materials are owned by Task or licensors. You may not copy or use them without prior written permission.",
   "heading9": "9. Account Suspension & Termination",
-  "section9": "Task may suspend or terminate user access at any time, with or without notice, for any reason—especially in cases of suspected fraud, abuse, or Terms violation.",
+  "section9": "Task may suspend or terminate user access at any time, with or without notice, for any reason, especially in cases of suspected fraud, abuse, or Terms violation.",
   "heading10": "10. Governing Law & Jurisdiction",
   "section10": "These Terms are governed exclusively by the laws of the Kingdom of Bahrain. Any dispute must be brought only in the courts of Bahrain. You waive any jurisdictional objections.",
   "heading11": "11. Changes to Terms",
