--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -758,9 +758,42 @@
      "removePhoto": "إزالة الصورة",
      "cancel": "إلغاء",
      "yes": "نعم",
-     "no": "لا",
-     "client": "عميل"
-   },
+         "no": "لا",
+    "client": "عميل",
+    "loading": "جاري التحميل...",
+    "choose": "اختر",
+    "takePic": "التقاط صورة",
+    "fromLibrary": "من المكتبة",
+    "fromFile": "من ملف",
+    "deleteConfirmTitle": "هل أنت متأكد؟",
+    "deleteConfirmMessage": "هل أنت متأكد من أنك تريد حذف هذا؟",
+    "delete": "حذف",
+    "cancel": "إلغاء",
+    "yes": "نعم",
+    "no": "لا",
+    "profilePicture": "صورة الملف الشخصي",
+    "changeProfilePicture": "تغيير صورة الملف الشخصي",
+    "removeProfilePicture": "إزالة صورة الملف الشخصي",
+    "managePhotoTitle": "إدارة صورة الملف الشخصي",
+    "uploadDocument": "رفع مستند",
+    "selectImageSource": "اختر مصدر الصورة",
+    "howToUploadImage": "كيف تريد رفع الصورة؟",
+    "takePhoto": "التقاط صورة",
+    "chooseFromLibrary": "اختيار من المكتبة",
+    "uploadAFile": "رفع ملف",
+    "chooseNewPhoto": "اختيار صورة جديدة",
+    "removePhoto": "إزالة الصورة",
+    "deleteDocumentConfirmTitle": "حذف المستند؟",
+    "deleteDocumentConfirmMessage": "هل أنت متأكد من أنك تريد حذف هذا المستند؟",
+    "documentDeleted": "تم حذف المستند",
+    "documentDeletedMessage": "تم حذف المستند بنجاح.",
+    "deleteFailed": "فشل الحذف",
+    "deleteFailedMessage": "لا يمكن حذف المستند. يرجى المحاولة مرة أخرى.",
+    "passwordResetSuccessTitle": "تم إعادة تعيين كلمة المرور بنجاح",
+    "passwordResetSuccessMessage": "تم إعادة تعيين كلمة المرور بنجاح. يمكنك الآن تسجيل الدخول بكلمة المرور الجديدة.",
+    "ok": "حسناً",
+    "continue": "متابعة"
+  },
    "taskerCompleteProfile": {
      "title": "أكمل ملفك الشخصي",
      "subText": "لأمان أفضل وتطابق أدق مع العملاء، يجب عليك إكمال ملفك الشخصي قبل المتابعة.",
