--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -738,7 +738,40 @@
     "cancel": "Cancel",
     "yes": "Yes",
     "no": "No",
-    "client": "Client"
+    "client": "Client",
+    "loading": "Loading...",
+    "choose": "Choose",
+    "takePic": "Take Picture",
+    "fromLibrary": "From Library",
+    "fromFile": "From File",
+    "deleteConfirmTitle": "Are you sure?",
+    "deleteConfirmMessage": "Are you sure you want to delete this?",
+    "delete": "Delete",
+    "cancel": "Cancel",
+    "yes": "Yes",
+    "no": "No",
+    "profilePicture": "Profile Picture",
+    "changeProfilePicture": "Change Profile Picture",
+    "removeProfilePicture": "Remove Profile Picture",
+    "managePhotoTitle": "Manage Profile Picture",
+    "uploadDocument": "Upload Document",
+    "selectImageSource": "Select Image Source",
+    "howToUploadImage": "How would you like to upload the image?",
+    "takePhoto": "Take Photo",
+    "chooseFromLibrary": "Choose from Library",
+    "uploadAFile": "Upload a File",
+    "chooseNewPhoto": "Choose New Photo",
+    "removePhoto": "Remove Photo",
+    "deleteDocumentConfirmTitle": "Delete Document?",
+    "deleteDocumentConfirmMessage": "Are you sure you want to delete this document?",
+    "documentDeleted": "Document Deleted",
+    "documentDeletedMessage": "Document has been deleted successfully.",
+    "deleteFailed": "Delete Failed",
+    "deleteFailedMessage": "Could not delete the document. Please try again.",
+    "passwordResetSuccessTitle": "Password Reset Success",
+    "passwordResetSuccessMessage": "Your password has been reset successfully. You can now log in with your new password.",
+    "ok": "OK",
+    "continue": "Continue"
   },
   "taskerCompleteProfile": {
     "title": "Complete Your Profile",
