post task screen

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -224,6 +224,56 @@
      "limitMsg": "يمكنك تحميل 3 صور كحد أقصى.",
      "missingTitle": "معلومات ناقصة",
      "fillAllFields": "يرجى ملء جميع الحقول المطلوبة.",
+     "page1": {
+       "title": "نشر مهمة",
+       "selectCategory": "اختر الفئة",
+       "continue": "متابعة",
+       "categories": {
+         "cleaning": "التنظيف",
+         "cleaningDesc": "استأجر عمال نظافة موثوقين لمنزلك أو مكتبك أو إيجارك — من التنظيف العميق إلى الترتيب اليومي.",
+         "handyman": "أعمال الصيانة",
+         "handymanDesc": "احجز عمال صيانة مهرة للإصلاحات السريعة والتركيبات وإصلاحات المنزل — كبيرة أو صغيرة.",
+         "shopping": "التسوق والتوصيل",
+         "shoppingDesc": "احصل على البقالة أو الضروريات أو الطرود واستلامها وتوصيلها مباشرة إلى باب منزلك.",
+         "pet": "خدمات الحيوانات الأليفة",
+         "petDesc": "اعثر على مساعدين مهتمين لرعاية الحيوانات الأليفة والمشي والتغذية والمزيد.",
+         "moving": "النقل",
+         "movingDesc": "استأجر عمال نقل موثوقين لتعبئة وتحميل ونقل ممتلكاتك بأمان.",
+         "furniture": "تركيب الأثاث",
+         "furnitureDesc": "احصل على أثاثك مبنيًا بدون متاعب من قبل عمال تركيب ذوي خبرة.",
+         "yardwork": "أعمال الحديقة",
+         "yardworkDesc": "احجز مساعدة موثوقة للبستنة ورعاية الحديقة والتنظيفات الخارجية.",
+         "other": "أخرى",
+         "otherDesc": "لا تجد مهمتك؟ انشرها هنا واتصل بالمساعد المناسب."
+       }
+     },
+     "page2": {
+       "title": "نشر مهمة",
+       "taskTitle": "عنوان المهمة",
+       "taskTitlePlaceholder": "ماذا تحتاج أن يتم عمله؟",
+       "taskTitleRequirement": "10 أحرف على الأقل",
+       "describeTask": "صف مهمتك",
+       "describeTaskPlaceholder": "أضف وصفًا أكثر تفصيلاً للمهمة التي تريد إنجازها",
+       "describeTaskRequirement": "25 حرفًا على الأقل",
+       "addImagesVideos": "إضافة صور/فيديوهات",
+       "taskAddress": "عنوان المهمة",
+       "addTaskAddress": "إضافة عنوان المهمة",
+       "continue": "متابعة",
+       "validationError": "خطأ في التحقق",
+       "titleTooShort": "عنوان المهمة يجب أن يكون 10 أحرف على الأقل.",
+       "descriptionTooShort": "وصف المهمة يجب أن يكون 25 حرفًا على الأقل."
+     },
+     "page3": {
+       "title": "نشر مهمة",
+       "budgetQuestion": "ما هي ميزانيتك؟",
+       "budgetDescription": "يرجى تحديد ميزانية تدفعها لإنجاز مهمتك (سعر ثابت). سيساعد هذا العاملين على معرفة المبلغ المناسب للعرض",
+       "budgetPlaceholder": "ميزانيتك",
+       "currency": "د.ب",
+       "finalPaymentNote": "سيتم الاتفاق على الدفع النهائي لاحقاً",
+       "postTask": "نشر المهمة",
+       "posting": "جاري النشر...",
+       "postingTask": "جاري نشر مهمتك..."
+     },
      "addressFields": {
        "houseNumber": "رقم المنزل/المبنى",
        "streetName": "اسم الشارع",
