--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -210,6 +210,56 @@
     "limitMsg": "You can upload a maximum of 3 images.",
     "missingTitle": "Missing Information",
     "fillAllFields": "Please fill out all required fields.",
+    "page1": {
+      "title": "Post a Task",
+      "selectCategory": "Select a Category",
+      "continue": "Continue",
+      "categories": {
+        "cleaning": "Cleaning",
+        "cleaningDesc": "Hire trusted cleaners for your home, office, or rental — from deep cleans to everyday tidying.",
+        "handyman": "Handyman", 
+        "handymanDesc": "Book skilled handymen for quick repairs, installations, and home fixes — big or small.",
+        "shopping": "Shopping & Delivery",
+        "shoppingDesc": "Get groceries, essentials, or packages picked up and delivered straight to your door.",
+        "pet": "Pet Services",
+        "petDesc": "Find caring helpers for pet sitting, walking, feeding, and more.",
+        "moving": "Moving",
+        "movingDesc": "Hire trusted movers to pack, load, and transport your belongings safely.",
+        "furniture": "Furniture Assembly",
+        "furnitureDesc": "Get your furniture built hassle-free by experienced assemblers.",
+        "yardwork": "Yardwork Services",
+        "yardworkDesc": "Book reliable help for gardening, lawn care, and outdoor clean-ups.",
+        "other": "Other",
+        "otherDesc": "Can't find your task? Post it here and get connected with the right helper."
+      }
+    },
+    "page2": {
+      "title": "Post a Task",
+      "taskTitle": "Task Title",
+      "taskTitlePlaceholder": "What do you need done?",
+      "taskTitleRequirement": "Minimum 10 Characters",
+      "describeTask": "Describe your Task",
+      "describeTaskPlaceholder": "Add a more detailed description of the task you want done",
+      "describeTaskRequirement": "Minimum 25 Characters",
+      "addImagesVideos": "Add Images/Videos",
+      "taskAddress": "Task Address",
+      "addTaskAddress": "Add Task Address",
+      "continue": "Continue",
+      "validationError": "Validation Error",
+      "titleTooShort": "Task title must be at least 10 characters long.",
+      "descriptionTooShort": "Task description must be at least 25 characters long."
+    },
+    "page3": {
+      "title": "Post a Task",
+      "budgetQuestion": "What's your budget?",
+      "budgetDescription": "Please set a budget that you would pay to complete your task (Flat Rate). This will help guide Taskers on how much to offer",
+      "budgetPlaceholder": "Your Budget",
+      "currency": "BHD",
+      "finalPaymentNote": "Final payment will be agreed on later",
+      "postTask": "Post Task",
+      "posting": "Posting...",
+      "postingTask": "Posting your task..."
+    },
     "addressFields": {
       "houseNumber": "House/Building Number",
       "streetName": "Street Name",
