changes to about us

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -755,9 +755,9 @@
    "biddingClosed": "تم إغلاق المزايدة"
   },
   "aboutUs": {
-   "title": "معلومات عنا",
-   "description": "هدفنا هو ربط الأشخاص المشغولين الذين يحتاجون إلى يد المساعدة في حياتهم بالأشخاص القريبين القادرين والراغبين في المساعدة. مساعدة كلاهما على حياة أفضل!"
-  }
+    "title": "معلومات عنا",
+    "description": "مهمتنا هي جعل الحياة اليومية أسهل من خلال ربط الأفراد المشغولين في البحرين بالأشخاص المستعدين لتقديم يد المساعدة. نحن نوفر منصة بسيطة وموثوقة حيث يمكن لمن يحتاجون إلى الدعم العثور على أفراد قادرين ومتحمسين للمساعدة، مع خلق فرص للطلاب والمهنيين والأفراد من جميع مناحي الحياة لكسب دخل إضافي. من خلال ربط هاتين المجموعتين، نهدف إلى تعزيز الراحة والتعاون وشعور أقوى بالمجتمع في جميع أنحاء البحرين."
+   }
    ,
    "common": {
      "errorTitle": "خطأ",
