--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -735,7 +735,7 @@
 },
 "aboutUs": {
   "title": "About Us",
-  "description": "Our aim is to connect busy people who need a helping hand in their lives with nearby people who are able and willing to help. Helping both live a better life!"
+  "description": "Our mission is to make everyday life easier by connecting busy individuals in Bahrain with people ready to lend a helping hand. We provide a simple and reliable platform where those in need of support can find capable individuals eager to assist, while also creating opportunities for students, professionals, and individuals from all walks of life to earn extra income. By bridging these two groups, we aim to foster convenience, collaboration, and a stronger sense of community across Bahrain."
 }
   ,
   "common": {
